# katran-control-plane

./: .actrc  .coverage  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  PHASE2-INTEGRATION-TESTS.md  PHASE2-SUMMARY.md  README.md  docker-compose.e2e.yml  docker-compose.test.yml  e2e-improve-plan.md  e2e-plan.md  improvement-plan.md  katran-bpf-maps-reference.md  katran-control-plane-plan.md  metrics-plan.md  phase2.1-plan.md  pyproject.toml  todo.md
.github/workflows/: ci.yml  release.yml
config/: katran-nested.yaml  katran.yaml
docs/superpowers/plans/: 2026-03-14-feature-parity.md  2026-03-14-public-repo-readiness.md  2026-03-15-e2e-feature-parity-tests.md  2026-03-15-test-coverage.md
src/katran/: __init__.py  service.py
src/katran_control_plane.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py
tests/e2e/: Dockerfile  Dockerfile.backend  conftest.py  debug_run.sh  debug_test.py  helpers.py  run-e2e.sh  test_control_plane.py  test_decap.py  test_down_reals.py  test_encap_src_ip.py  test_feature_flags.py  test_health_check.py  test_lru.py  test_prometheus_extended.py  test_quic.py  test_src_routing.py  test_stats.py  test_traffic_forwarding.py
tests/integration/: Dockerfile  ERROR-OUTPUT-EXAMPLES.md  README.md  __init__.py  conftest.py  run-tests.sh  test_bpf_maps.py  test_vip_real_managers.py
tests/unit/: __init__.py  test_ch_rings_map.py  test_collector.py  test_config.py  test_ctl_array.py  test_decap_manager.py  test_down_real_manager.py  test_feature_flags.py  test_hc_manager.py  test_lru_manager.py  test_maglev.py  test_map_manager.py  test_minimal_api.py  test_new_map_wrappers.py  test_prometheus_new.py  test_quic_manager.py  test_real_manager.py  test_reals_map.py  test_rest_api.py  test_rest_api_new.py  test_service.py  test_src_routing_manager.py  test_stats_manager.py  test_stats_map.py  test_types.py  test_vip_manager.py  test_vip_map.py
(+61 files in other folders)
